Fix layout issues on page cart

--- a/style.css
+++ b/style.css
@@ -295,6 +295,35 @@ ul.tabs.wc-tabs li a {
 	background-image: none;
 }
 
+.woocommerce-cart table.cart img {
+	width: 64px;
+	border: none;
+}
+
+.woocommerce a.remove {
+	line-height: 1.2;
+}
+
+.woocommerce table.cart td.actions .input-text, 
+.woocommerce-page #content table.cart td.actions .input-text, 
+.woocommerce-page table.cart td.actions .input-text {
+	width: auto;
+}
+
+.woocommerce .cart .button, 
+.woocommerce .cart input.button, 
+.woocommerce button.button:disabled,
+.woocommerce button.button:disabled[disabled] {
+	padding-top: .4rem;
+	padding-bottom: .4rem;
+}
+
+.woocommerce-cart-form .actions button.button:hover:hover {
+	transform: none;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+}
+
 /*--------------------------------------------------------------
 ## Add to cart
 --------------------------------------------------------------*/
